search box and search tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/main.css" />
 
     <title>Frontend Mentor | Job Listings</title>
 
@@ -26,7 +32,8 @@
     </style>
   </head>
   <body>
-    <section class="top-section">
+    <section class="top-section"></section>
+    <section class="job-list">
       <div class="search">
         <div class="tag-container">
           <div class="search-tag">
@@ -44,228 +51,228 @@
         </div>
         <p class="clear-search">Clear</p>
       </div>
-    </section>
-    <section class="job-list">
-      <div class="job-card featured">
-        <div class="job-card__details">
-          <img src="images/photosnap.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Photosnap </span>
-              <span class="new">New!</span>
-              <span class="featured">Featured</span>
-            </div>
-            <div class="role">Senior Frontend Developer</div>
-            <div class="bottom">
-              1d ago <span class="dot">.</span> Full Time
-              <span class="dot">.</span> USA only
-            </div>
-          </div>
-        </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Frontend</p>
-          <p class="job-tag">Senior</p>
-          <p class="job-tag">HTML</p>
-          <p class="job-tag">CSS</p>
-          <p class="job-tag">JavaScript</p>
-        </div>
-      </div>
-      <div class="job-card featured">
-        <div class="job-card__details">
-          <img src="images/manage.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Manage </span>
-              <span class="new">New!</span>
-              <span class="featured">Featured</span>
-            </div>
-            <div class="role">Fullstack Developer</div>
-            <div class="bottom">
-              1d ago <span class="dot">.</span> Part Time
-              <span class="dot">.</span> Remote
+      <div class="jobs">
+        <div class="job-card featured">
+          <div class="job-card__details">
+            <img src="images/photosnap.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Photosnap </span>
+                <span class="new">New!</span>
+                <span class="featured">Featured</span>
+              </div>
+              <div class="role">Senior Frontend Developer</div>
+              <div class="bottom">
+                1d ago <span class="dot">.</span> Full Time
+                <span class="dot">.</span> USA only
+              </div>
             </div>
           </div>
-        </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Fullstack</p>
-          <p class="job-tag">Midweight</p>
-          <p class="job-tag">Python</p>
-          <p class="job-tag">React</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/account.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Account </span>
-              <span class="new">New!</span>
-            </div>
-            <div class="role">Junior Frontend Developer</div>
-            <div class="bottom">
-              2d ago <span class="dot">.</span> Part Time
-              <span class="dot">.</span> USA only
-            </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Frontend</p>
+            <p class="job-tag">Senior</p>
+            <p class="job-tag">HTML</p>
+            <p class="job-tag">CSS</p>
+            <p class="job-tag">JavaScript</p>
           </div>
         </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Frontend</p>
-          <p class="job-tag">Junior</p>
-          <p class="job-tag">JavaScript</p>
-          <p class="job-tag">React</p>
-          <p class="job-tag">Sass</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/myhome.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> MyHome </span>
-            </div>
-            <div class="role">Junior Frontend Developer</div>
-            <div class="bottom">
-              5d ago <span class="dot">.</span> Contract
-              <span class="dot">.</span> USA only
+        <div class="job-card featured">
+          <div class="job-card__details">
+            <img src="images/manage.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Manage </span>
+                <span class="new">New!</span>
+                <span class="featured">Featured</span>
+              </div>
+              <div class="role">Fullstack Developer</div>
+              <div class="bottom">
+                1d ago <span class="dot">.</span> Part Time
+                <span class="dot">.</span> Remote
+              </div>
             </div>
           </div>
-        </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Frontend</p>
-          <p class="job-tag">Junior</p>
-          <p class="job-tag">CSS</p>
-          <p class="job-tag">JavaScript</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/loop-studios.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Loop Studios </span>
-            </div>
-            <div class="role">Software Engineer</div>
-            <div class="bottom">
-              1w ago <span class="dot">.</span> Full Time
-              <span class="dot">.</span> Worldwide
-            </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Fullstack</p>
+            <p class="job-tag">Midweight</p>
+            <p class="job-tag">Python</p>
+            <p class="job-tag">React</p>
           </div>
         </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Fullstack</p>
-          <p class="job-tag">Midweight</p>
-          <p class="job-tag">JavaScript</p>
-          <p class="job-tag">Ruby</p>
-          <p class="job-tag">Sass</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/faceit.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> FaceIt </span>
-            </div>
-            <div class="role">Junior Backend Developer</div>
-            <div class="bottom">
-              2w ago <span class="dot">.</span> Full Time
-              <span class="dot">.</span> UK only
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/account.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Account </span>
+                <span class="new">New!</span>
+              </div>
+              <div class="role">Junior Frontend Developer</div>
+              <div class="bottom">
+                2d ago <span class="dot">.</span> Part Time
+                <span class="dot">.</span> USA only
+              </div>
             </div>
           </div>
-        </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Backend</p>
-          <p class="job-tag">Junior</p>
-          <p class="job-tag">Ruby</p>
-          <p class="job-tag">RoR</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/shortly.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Shortly </span>
-            </div>
-            <div class="role">Junior Developer</div>
-            <div class="bottom">
-              2w ago <span class="dot">.</span> Full Time
-              <span class="dot">.</span> Worldwide
-            </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Frontend</p>
+            <p class="job-tag">Junior</p>
+            <p class="job-tag">JavaScript</p>
+            <p class="job-tag">React</p>
+            <p class="job-tag">Sass</p>
           </div>
         </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Frontend</p>
-          <p class="job-tag">Junior</p>
-          <p class="job-tag">HTML</p>
-          <p class="job-tag">JavaScript</p>
-          <p class="job-tag">Sass</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/insure.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Insure </span>
-            </div>
-            <div class="role">Junior Frontend Developer</div>
-            <div class="bottom">
-              2w ago <span class="dot">.</span> Full Time
-              <span class="dot">.</span> Worldwide
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/myhome.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> MyHome </span>
+              </div>
+              <div class="role">Junior Frontend Developer</div>
+              <div class="bottom">
+                5d ago <span class="dot">.</span> Contract
+                <span class="dot">.</span> USA only
+              </div>
             </div>
           </div>
-        </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Frontend</p>
-          <p class="job-tag">Junior</p>
-          <p class="job-tag">JavaScript</p>
-          <p class="job-tag">Vue</p>
-          <p class="job-tag">Sass</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/eyecam-co.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> Eyecam Co. </span>
-            </div>
-            <div class="role">Full Stack Engineer</div>
-            <div class="bottom">
-              3w ago <span class="dot">.</span> Full Time
-              <span class="dot">.</span> Worldwide
-            </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Frontend</p>
+            <p class="job-tag">Junior</p>
+            <p class="job-tag">CSS</p>
+            <p class="job-tag">JavaScript</p>
           </div>
         </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Fullstack</p>
-          <p class="job-tag">Midweight</p>
-          <p class="job-tag">JavaScript</p>
-          <p class="job-tag">Python</p>
-          <p class="job-tag">Django</p>
-        </div>
-      </div>
-      <div class="job-card">
-        <div class="job-card__details">
-          <img src="images/the-air-filter-company.svg" alt="" />
-          <div class="details">
-            <div class="top">
-              <span class="name"> The Air Filter Company </span>
-            </div>
-            <div class="role">Front-end Dev</div>
-            <div class="bottom">
-              1mo ago <span class="dot">.</span> Part Time
-              <span class="dot">.</span> Worldwide
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/loop-studios.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Loop Studios </span>
+              </div>
+              <div class="role">Software Engineer</div>
+              <div class="bottom">
+                1w ago <span class="dot">.</span> Full Time
+                <span class="dot">.</span> Worldwide
+              </div>
             </div>
           </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Fullstack</p>
+            <p class="job-tag">Midweight</p>
+            <p class="job-tag">JavaScript</p>
+            <p class="job-tag">Ruby</p>
+            <p class="job-tag">Sass</p>
+          </div>
         </div>
-        <div class="job-card__tags">
-          <p class="job-tag">Frontend</p>
-          <p class="job-tag">Junior</p>
-          <p class="job-tag">JavaScript</p>
-          <p class="job-tag">React</p>
-          <p class="job-tag">Sass</p>
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/faceit.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> FaceIt </span>
+              </div>
+              <div class="role">Junior Backend Developer</div>
+              <div class="bottom">
+                2w ago <span class="dot">.</span> Full Time
+                <span class="dot">.</span> UK only
+              </div>
+            </div>
+          </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Backend</p>
+            <p class="job-tag">Junior</p>
+            <p class="job-tag">Ruby</p>
+            <p class="job-tag">RoR</p>
+          </div>
+        </div>
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/shortly.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Shortly </span>
+              </div>
+              <div class="role">Junior Developer</div>
+              <div class="bottom">
+                2w ago <span class="dot">.</span> Full Time
+                <span class="dot">.</span> Worldwide
+              </div>
+            </div>
+          </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Frontend</p>
+            <p class="job-tag">Junior</p>
+            <p class="job-tag">HTML</p>
+            <p class="job-tag">JavaScript</p>
+            <p class="job-tag">Sass</p>
+          </div>
+        </div>
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/insure.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Insure </span>
+              </div>
+              <div class="role">Junior Frontend Developer</div>
+              <div class="bottom">
+                2w ago <span class="dot">.</span> Full Time
+                <span class="dot">.</span> Worldwide
+              </div>
+            </div>
+          </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Frontend</p>
+            <p class="job-tag">Junior</p>
+            <p class="job-tag">JavaScript</p>
+            <p class="job-tag">Vue</p>
+            <p class="job-tag">Sass</p>
+          </div>
+        </div>
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/eyecam-co.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> Eyecam Co. </span>
+              </div>
+              <div class="role">Full Stack Engineer</div>
+              <div class="bottom">
+                3w ago <span class="dot">.</span> Full Time
+                <span class="dot">.</span> Worldwide
+              </div>
+            </div>
+          </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Fullstack</p>
+            <p class="job-tag">Midweight</p>
+            <p class="job-tag">JavaScript</p>
+            <p class="job-tag">Python</p>
+            <p class="job-tag">Django</p>
+          </div>
+        </div>
+        <div class="job-card">
+          <div class="job-card__details">
+            <img src="images/the-air-filter-company.svg" alt="" />
+            <div class="details">
+              <div class="top">
+                <span class="name"> The Air Filter Company </span>
+              </div>
+              <div class="role">Front-end Dev</div>
+              <div class="bottom">
+                1mo ago <span class="dot">.</span> Part Time
+                <span class="dot">.</span> Worldwide
+              </div>
+            </div>
+          </div>
+          <div class="job-card__tags">
+            <p class="job-tag">Frontend</p>
+            <p class="job-tag">Junior</p>
+            <p class="job-tag">JavaScript</p>
+            <p class="job-tag">React</p>
+            <p class="job-tag">Sass</p>
+          </div>
         </div>
       </div>
     </section>
