added data attributes to html tags

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <p class="clear-search">Clear</p>
       </div>
       <div class="jobs">
-        <div class="job-card featured">
+        <div
+          class="job-card featured"
+          data-tags="Frontend Senior HTML CSS JavaScriptt"
+        >
           <div class="job-card__details">
             <img src="images/photosnap.svg" alt="" />
             <div class="details">
@@ -76,7 +79,10 @@
             <p class="job-tag">JavaScript</p>
           </div>
         </div>
-        <div class="job-card featured">
+        <div
+          class="job-card featured"
+          data-tags="Fullstack Midweight Python React"
+        >
           <div class="job-card__details">
             <img src="images/manage.svg" alt="" />
             <div class="details">
@@ -99,7 +105,7 @@
             <p class="job-tag">React</p>
           </div>
         </div>
-        <div class="job-card">
+        <div class="job-card" data-tags="Frontend Junior JavaScript React Sass">
           <div class="job-card__details">
             <img src="images/account.svg" alt="" />
             <div class="details">
@@ -122,7 +128,7 @@
             <p class="job-tag">Sass</p>
           </div>
         </div>
-        <div class="job-card">
+        <div class="job-card" data-tags="Frontend Junior CSS JavaScript">
           <div class="job-card__details">
             <img src="images/myhome.svg" alt="" />
             <div class="details">
@@ -143,7 +149,10 @@
             <p class="job-tag">JavaScript</p>
           </div>
         </div>
-        <div class="job-card">
+        <div
+          class="job-card"
+          data-tags="Fullstack Midweight JavaScript Ruby Sass"
+        >
           <div class="job-card__details">
             <img src="images/loop-studios.svg" alt="" />
             <div class="details">
@@ -165,7 +174,7 @@
             <p class="job-tag">Sass</p>
           </div>
         </div>
-        <div class="job-card">
+        <div class="job-card" data-tags="Backend Junior Ruby RoR">
           <div class="job-card__details">
             <img src="images/faceit.svg" alt="" />
             <div class="details">
@@ -186,7 +195,7 @@
             <p class="job-tag">RoR</p>
           </div>
         </div>
-        <div class="job-card">
+        <div class="job-card" data-tags="Frontend Junior HTML JavaScript Sass">
           <div class="job-card__details">
             <img src="images/shortly.svg" alt="" />
             <div class="details">
@@ -208,7 +217,7 @@
             <p class="job-tag">Sass</p>
           </div>
         </div>
-        <div class="job-card">
+        <div class="job-card" data-tags="Frontend Junior JavaScript Vue Sass">
           <div class="job-card__details">
             <img src="images/insure.svg" alt="" />
             <div class="details">
@@ -230,7 +239,10 @@
             <p class="job-tag">Sass</p>
           </div>
         </div>
-        <div class="job-card">
+        <div
+          class="job-card"
+          data-tags="Fullstack Midweight JavaScript Python Django"
+        >
           <div class="job-card__details">
             <img src="images/eyecam-co.svg" alt="" />
             <div class="details">
@@ -252,7 +264,7 @@
             <p class="job-tag">Django</p>
           </div>
         </div>
-        <div class="job-card">
+        <div class="job-card" data-tags="Frontend Junior JavaScript React Sass">
           <div class="job-card__details">
             <img src="images/the-air-filter-company.svg" alt="" />
             <div class="details">
