--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="css/main.css" />
 
     <title>Frontend Mentor | Job Listings</title>
@@ -66,7 +70,7 @@
       <div class="jobs">
         <div
           class="job-card featured"
-          data-tags="Frontend Senior HTML CSS JavaScriptt"
+          data-tags="Frontend Senior HTML CSS JavaScript"
           id="first-card"
         >
           <div class="job-card__details">
